# robin

./: .gitignore  Cargo.toml  LICENSE  README.md
.claude/: settings.local.json
.github/workflows/: test.yml
crates/cli/: Cargo.toml
crates/cli/src/: main.rs
crates/core/: Cargo.toml
crates/core/src/: ast.rs  codegen.rs  ir.rs  lexer.rs  lib.rs  lower.rs  parser.rs  pass.rs  token.rs
crates/core/src/backend/: cranelift.rs
samples/: ack.rec  stdlib.rec
